[gd_scene load_steps=18 format=3 uid="uid://0kjxm6yevg8b"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_snb1i"]
[ext_resource type="Texture2D" uid="uid://ijyv6o8koysu" path="res://Assets/graphics/backgrounds/menu background.png" id="2_iou22"]
[ext_resource type="FontFile" uid="uid://d223nojg0mkop" path="res://Assets/fonts/good times rg.otf" id="3_ikljd"]
[ext_resource type="Texture2D" uid="uid://r7wvlju7fjyl" path="res://Assets/graphics/icons/X mark for back red.png" id="3_ueyvf"]
[ext_resource type="Texture2D" uid="uid://ca1d53c4k58au" path="res://Assets/graphics/icons/check mark.png" id="4_rw7rf"]
[ext_resource type="Texture2D" uid="uid://c303veqymxvjl" path="res://Assets/graphics/icons/uncheck mark.png" id="5_ys071"]

[sub_resource type="MeshTexture" id="MeshTexture_egn68"]

[sub_resource type="MeshTexture" id="MeshTexture_tenci"]

[sub_resource type="MeshTexture" id="MeshTexture_en7xq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0iem4"]
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dn55"]
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_plcnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brgwq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fjl3p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gdbft"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ee3g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_asbu8"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_snb1i")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1919.0
texture = ExtResource("2_iou22")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_top = 320.0
offset_right = 1080.0
offset_bottom = 1600.0
color = Color(0, 0, 0, 0.745098)
metadata/_edit_use_anchors_ = true

[node name="Back" type="TextureButton" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 940.0
offset_right = 1040.0
offset_bottom = 100.0
scale = Vector2(1.4, 1.4)
texture_normal = ExtResource("3_ueyvf")

[node name="SETTINGS" type="Label" parent="Control/ColorRect"]
layout_mode = 0
offset_top = 174.0
offset_right = 1080.0
offset_bottom = 295.0
theme_override_fonts/font = ExtResource("3_ikljd")
theme_override_font_sizes/font_size = 100
text = "SETTINGS"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Music" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.524074
offset_top = 306.0
offset_right = 514.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("3_ikljd")
theme_override_font_sizes/font_size = 60
text = "Music"
metadata/_edit_use_anchors_ = true

[node name="MusicSliderold" type="HSlider" parent="Control/ColorRect/Music"]
visible = false
layout_mode = 0
offset_left = 288.0
offset_top = -11.0
offset_right = 588.0
offset_bottom = 89.0
max_value = 1.0
step = 0.0
value = 1.0

[node name="MusicSlider" type="HSlider" parent="Control/ColorRect/Music"]
layout_mode = 0
offset_left = 266.0
offset_top = -9.99994
offset_right = 566.0
offset_bottom = 90.0001
theme_override_icons/grabber = SubResource("MeshTexture_egn68")
theme_override_icons/grabber_highlight = SubResource("MeshTexture_tenci")
theme_override_icons/grabber_disabled = SubResource("MeshTexture_en7xq")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_0iem4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_4dn55")
max_value = 1.0
step = 0.0
value = 1.0

[node name="SFX" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0695312
anchor_right = 0.524074
anchor_bottom = 0.0695312
offset_top = 306.0
offset_right = 514.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("3_ikljd")
theme_override_font_sizes/font_size = 60
text = "SFX
"
metadata/_edit_use_anchors_ = true

[node name="SFX_Slider" type="HSlider" parent="Control/ColorRect/SFX"]
layout_mode = 0
offset_left = 182.0
offset_top = -9.99994
offset_right = 482.0
offset_bottom = 90.0001
theme_override_icons/grabber = SubResource("MeshTexture_egn68")
theme_override_icons/grabber_highlight = SubResource("MeshTexture_tenci")
theme_override_icons/grabber_disabled = SubResource("MeshTexture_en7xq")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_0iem4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_4dn55")
max_value = 1.0
step = 0.0
value = 1.0

[node name="ShowDiggedBlocks" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.103906
anchor_right = 0.293519
anchor_bottom = -0.103906
offset_top = 617.0
offset_right = 763.0
offset_bottom = 690.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("3_ikljd")
theme_override_font_sizes/font_size = 60
text = "SHOW DIGGED GOLD:"
metadata/_edit_use_anchors_ = true

[node name="CheckBox" type="CheckBox" parent="Control/ColorRect/ShowDiggedBlocks"]
layout_mode = 0
offset_left = 771.0
offset_top = -12.0
offset_right = 871.0
offset_bottom = 88.0
theme_override_icons/checked = ExtResource("4_rw7rf")
theme_override_icons/unchecked = ExtResource("5_ys071")
theme_override_styles/normal = SubResource("StyleBoxEmpty_plcnj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_brgwq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fjl3p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gdbft")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2ee3g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_asbu8")
button_pressed = true

[connection signal="pressed" from="Control/ColorRect/Back" to="." method="_on_button_pressed"]
[connection signal="changed" from="Control/ColorRect/Music/MusicSliderold" to="." method="_on_music_slider_changed"]
[connection signal="drag_ended" from="Control/ColorRect/Music/MusicSliderold" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="Control/ColorRect/Music/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="Control/ColorRect/SFX/SFX_Slider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="toggled" from="Control/ColorRect/ShowDiggedBlocks/CheckBox" to="." method="_on_check_box_toggled"]
